[package]
name = "duckknow-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rand = "0.8.5"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
tonlib = "0.5"
ed25519-dalek = "1.0.1"
base64 = "0.21.2"
jwt = "0.16.0"