[package]
name = "demo-dapp-backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.35", features = ["full"] }
axum = "^0.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
rand = "^0.8"
hmac = "^0.12"
sha2 = "^0.10"
hex = "^0.4"
anyhow = "^1.0"
tonlib = "^0.14"
ed25519-dalek = "^2.1"
base64 = "^0.21"
jsonwebtoken = { version = "^9.2", default-features = false }
async-trait = "^0.1"
axum-extra = { version = "^0.9", features = ["typed-header"] }
once_cell = "^1.19"
tower-http = { version = "^0.5", features = ["cors"] }